# clinical-trials-assistant

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  manifest.json  pyproject.toml  requirements.txt
.chainlit/: config.toml
.chainlit/translations/: en-US.json
clinical_trials_assistant/: chainlit.py  main.py  nodes.py  providers.py
public/: app.js
scripts/: ddl.sql  drop_ddl.sql
tests/: test_conversation_persistence.py  test_providers.py  test_providers_integration.py
